# Rivet

./: .gitignore  Generate_MinGW_Makefile_GCC.bat  Generate_SublimeText_Project_GNU_GCC.sh  Generate_VisualStudio_Solution_CLANG_LLVM.bat  Generate_VisualStudio_Solution_MSVC.bat  Generate_Xcode.sh  LICENSE.md  README.md  Setup.bat  Setup.sh
Bulk/Source/: CMakeLists.txt
Bulk/Source/BlurBehind/: CMakeLists.txt
Bulk/Source/BlurBehind/Source/: BlurBehind.cpp
Bulk/Source/CustomCaption/: CMakeLists.txt
Bulk/Source/CustomCaption/Source/: CustomCaption.cpp
Bulk/Source/Rivet/: CMakeLists.txt
Bulk/Source/Rivet/Include/: RivetCustomButton  RivetCustomCaption  RivetCustomMainWindow  RivetDefaultCaption  RivetDockingCallbackLibrary  RivetDockingManager  RivetMonacoWidget  RivetTab  RivetTabArea
Bulk/Source/Rivet/Include/Rivet/: Rivet.CustomButton.h  Rivet.CustomCaption.h  Rivet.CustomMainWindow.h  Rivet.DefaultCaption.h  Rivet.DockingCallbackLibrary.h  Rivet.Tab.h  Rivet.TabArea.h
Bulk/Source/Rivet/Include/Rivet/__private__/: Rivet.__private__.AbstractFramelessBlurBehindWindow.h  Rivet.__private__.CustomMainWindowBase.h  Rivet.__private__.DockingManager.h  Rivet.__private__.GeometryUtils.h
Bulk/Source/Rivet/Source/Rivet/: Rivet.CustomButton.cpp  Rivet.CustomCaption.cpp  Rivet.CustomMainWindow.cpp  Rivet.DefaultCaption.cpp  Rivet.DockingCallbackLibrary.cpp  Rivet.Tab.cpp  Rivet.TabArea.cpp
Bulk/Source/Rivet/Source/Rivet/__private__/: Rivet.__private__.AbstractFramelessBlurBehindWindow.cpp  Rivet.__private__.CustomMainWindowBase.cpp  Rivet.__private__.DockingManager.cpp  Rivet.__private__.DockingManager.h  Rivet.__private__.GeometryUtils.cpp  Rivet.__private__.WinExtras.cpp  Rivet.__private__.WinExtras.h
Bulk/Source/TabDemo/: CMakeLists.txt
Bulk/Source/TabDemo/Source/: TabDemo.cpp
Bulk/Tools/: DefaultConfig.cmake  GlobalConfig.cmake
Bulk/Tools/Scripts/Linux/: Generate_SublimeText_Project_GNU_GCC.sh
Bulk/Tools/Scripts/Mac/: Generate_Xcode.sh
Bulk/Tools/Scripts/Windows/: Generate_MinGW_Makefile_GCC.bat  SetupHooks.bat  (+4 more)
(+3 files in other folders)
